css/style.css
/* Default Styles ----------------------*/

* {
	box-sizing: border-box;
}

/*Header----------------------------------------------------------------------*/

.main-header {
  height: 800px;
  margin-top: 0;
  background: purple url('../img/Band Pic With Text.png') no-repeat center;
  background-size: cover;
	width: 100%;
}

/*Video-----------------------------------------------------------------------*/

.video-1 {
    background: transparent;
    height: 750px;
    padding: 0;
}

.video-2 {
    background: transparent;
    height: 750px;
    padding: 0;
}

iframe {
    width: 100%;
    height: 100%;
    border-top-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-left-width: 0px;
}

/*Body------------------------------------------------------------------------*/

h2 {
  font-family: Futura, Arial, sans-serif;
  font-weight: normal;
  color: purple;
  text-shadow: 2px 2px 10px rgba(0,0,0, 1);
  font-size: 10rem;
  font-weight: normal;
  margin: 0;
}

.new-album img {
  margin-left: 100px;
  box-shadow: 2px 2px 10px rgba(0,0,0, 1);
}

.tour-dates {
  text-align: right;
}

.tour-dates table {
  font-size: 3rem;
  color: black;
  width: 90%;
  margin: auto;
  margin-bottom: 10px;
  text-align: left;
}

.tour-dates td {
  padding: 5px;
}

.tour-dates tr {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

a.button {
    -webkit-appearance: button;
    -webkit-border-radius: 0;
    -moz-appearance: button;
    appearance: button;
    font-size: 2rem;
    text-decoration: none;
    color: white;
    background: black;
    padding: 5px;
    width: 50%;
    text-align: center;
}

.tickets {
  text-align: right;
}


/*Footer----------------------------------------------------------------------*/

.footer {
  background: #040203;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}

